# flight-maps

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml
examples/3f99ca78/: interactive_3f99ca78.html
examples/3f99ca78/kepler_3f99ca78/: README.md  config.json  track.csv
metadata/: TEMPLATE.md  extra-metadata-IMG_8233.md  extra-metadata-IMG_8234.md  extra-metadata-IMG_8235.md  flight-3f99ca78.md
scripts/: run_all.py
src/flight_maps/: __init__.py  canonical.py  metadata.py
src/flight_maps/parsers/: __init__.py  flightaware.py  fr24.py
src/flight_maps/viz/: _watermark.py  art_topo.py  dashboard.py  heading_rose.py  interactive.py  kepler_export.py  static_map.py  time_track.py  track_3d.py
test_examples/flightaware/: SCHEMA.md
test_examples/fr24/: 3f99ca78.csv  3f99ca78.kml  SCHEMA.md
tests/: test_parsers.py
